[gd_scene load_steps=5 format=3 uid="uid://dk320jdiyg35m"]

[ext_resource type="Texture2D" uid="uid://er1e5oymj5vu" path="res://icons/add.svg" id="1_rxlms"]
[ext_resource type="Script" path="res://screens/entry_list.gd" id="1_w04am"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hvy2t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2677"]

[node name="EntryList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w04am")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ItemList" type="ItemList" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 72
theme_override_styles/panel = SubResource("StyleBoxEmpty_hvy2t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t2677")
auto_height = true
text_overrun_behavior = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -296.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Add" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
icon = ExtResource("1_rxlms")
icon_alignment = 1

[node name="DeleteAll" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 24
text = "HOLD TO DELETE ALL"
flat = true

[node name="DeleteProgress" type="ProgressBar" parent="VBoxContainer/DeleteAll"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
max_value = 3.0
show_percentage = false

[connection signal="item_clicked" from="ScrollContainer/MarginContainer/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Add" to="." method="_on_add_pressed"]
